--- a/css/sample.css
+++ b/css/sample.css
@@ -72,7 +72,9 @@ header ul:after {
 /* ここから */
 .function {
   min-height: 200%;
-padding-bottom: 30px;
+  padding-bottom: 30px;
+  background-color: #D3D3D3;
+  height: 300px;
 }
 .function-images {
   /* background-color: #D3D3D3; */
